--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="sontung.dangvu.moneytracker.SecondFragment"
+        android:name="sontung.dangvu.moneytracker.DetailFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
