--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -14,4 +14,9 @@
         android:id="@+id/nav_plan"
         android:icon="@drawable/ic_plan"
         android:title="@string/title_plan" />
+
+    <item
+        android:id="@+id/nav_setting"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/title_setting" />
 </menu>
