--- a/app/src/main/res/navigation/nav_money.xml
+++ b/app/src/main/res/navigation/nav_money.xml
@@ -27,4 +27,11 @@
         android:label="@string/list_fragment_label"
         tools:layout="@layout/fragment_list" />
 
+    <fragment
+        android:id="@+id/nav_setting"
+        android:name="sontung.dangvu.moneytracker.ui.settings.SettingFragment"
+        android:label="@string/setting_fragment_label"
+        tools:layout="@layout/fragment_setting" />
+
+
 </navigation>
